# rubiks

./: CMakeLists.txt  conanfile.txt  main.cpp
